<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/linear"
    tools:context="com.hui.class4_changecolor.MainActivity">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ColorSytle"
        android:id="@+id/spinner" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Red"
            android:textColor="@color/Red"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/NormalSize"
            android:id="@+id/radioButton"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Green"
            android:layout_marginRight="20dp"
            android:textColor="@color/Green"
            android:textSize="@dimen/NormalSize"
            android:id="@+id/radioButton2"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Blue"
            android:textColor="@color/Blue"
            android:textSize="@dimen/NormalSize"
            android:id="@+id/radioButton3"
            android:checked="false" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:max="255"
            android:progress="0"
            android:id="@+id/seekBar" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Red"
            android:textColor="@color/Red"
            android:textSize="@dimen/NormalSize"
            android:layout_weight="2"
            android:id="@+id/textView" />
    </LinearLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/White"
        android:textOff="@string/Black"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/NormalSize"
        android:id="@+id/toggleButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/StringColor"
        android:textSize="@dimen/BigText"
        android:id="@+id/textView2" />
</LinearLayout>
